# autoplan

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
autoplan/: core.py
docs/: USER_GUIDE.md
examples/stock_benchmark/: pyproject.toml
examples/stock_benchmark/stock_benchmark/: app.py  dependencies.py  main.py  test.py
examples/stock_benchmark/stock_benchmark/tools/: calculate_statistics.py  combine_ticker_data.py  download_ticker.py
examples/stock_benchmark/tests/: test_combine_ticker_data.py
examples/story_generator/: pyproject.toml
examples/story_generator/story_generator/: app.py  dependencies.py  main.py
examples/summarize_documents/: pyproject.toml
examples/summarize_documents/summarize_documents/: app.py  dependencies.py  main.py
tests/: test_chain.py
